Adding Hero Api, Network Module , ApiResponse , UseCases , DataStore Preferences , Splash view Model , Welcome viewModel , Home Screen topBar , also some Colors and Constants , Internet Permission...

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,5 @@
     <string name="explore_on_board">Find your favorite heroes and learn some of the things that you didn\'t know about.</string>
     <string name="power_on_board">Check out your hero\'s power and  see how much are they strong comparing to others.</string>
     <string name="on_boarding_image">On Boarding Image</string>
+    <string name="search_icon">Search Icon</string>
 </resources>
